<resources>
    <string name="app_name">EazyRes</string>
    <string name="tagline">Find Your Home Near Campus, With Total Confidence</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="have_account">Already have an account? Log In</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="properties">Properties Near You</string>
</resources>
